fix(due-date): Reduce lb z-index because :hamburger:

--- a/app/styles/modules/common/lightbox.scss
+++ b/app/styles/modules/common/lightbox.scss
@@ -676,7 +676,7 @@
 }
 
 .lightbox-set-due-date {
-    z-index: $overall-layer;
+    z-index: $loading-layer;
     form {
         flex-basis: 600px;
         flex-flow: 0;
